--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "bb-picker",
   "main": "built/bb-picker.js",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Some module...",
   "dependencies": {
-    "bbcv": "0.7.11"
+    "bbcv": "0.7.12"
   },
   "devDependencies": {
     "requirejs": "*",
@@ -12,5 +12,9 @@
     "underscore": "*",
     "jquery": "*",
     "qunit": "*"
+  },
+  "resolutions": {
+    "bbcv": "0.7.12",
+    "lowercase-backbone": "0.3.8"
   }
 }
